2.8.0
???

NEW: improved font handling in table editor #122
FIX: proper font handling in balloon tooltips

2.7.1
Sep 26, 2019

Support for IDE v192.*

2.7.0
Sep 16, 2019

NEW: add separator selection to table editor #140
FIX: coloring of table cells (e.g. selection mode)
FIX: enter edit mode via keyboard (e.g. ENTER key in cell)

2.6.4
Aug 30, 2019

FIX: scrollable table cells
FIX: auto cell height computation

2.6.3
Aug 25, 2019

FIX: Index out of bound error on multi line clear cells #151

2.6.2
Aug 09, 2019

FIX: AssertionError: Already disposed: Project (Disposed) #147
FIX: No fallback font used in table editor #145

2.6.1
Aug 01, 2019

NEW: plugin logo icons added (Thx to FineVisuals for support)

2.6.0
Jul 18, 2019

NEW: Table column width calculation and adjustment based on content

2.5.1
Jun 25, 2019

FIX: ConcurrentModificationException in MultiLineCellRenderer

2.5.0
May 16, 2019

NEW: PSV file support
FIX: NullPointerException in StorageHelper class

2.4.0
May 11, 2019

NEW: option to keep/ignore a linebreak at the end of a file (table editor)
NEW: improved change detection of table editor to avoid overwriting original text representation without editing any values
NEW: file based value separator (e.g. ',' or ';')

2.3.1
Mar 31, 2019

NEW: use default color scheme & font for table editor as well
FIX: ConcurrentModificationException tackled (table editor)

2.3.0
Mar 04, 2019

NEW: Zoom table-editor cells with Ctrl+Mouse Wheel (contribution by @royqh1979)
FIX: Scratches are now recognised as CSV
FIX: Several issues resolved by reworking column/row editing

2.2.1
Jan 26, 2019

FIX: ArrayIndexOutOfBoundsException when opening a CSV file with an unexpected separator (table editor)
FIX: ConcurrentModificationException during event handling (table editor)

2.2.0
Jan 13, 2019

NEW: option to fixate first row as header (table editor)
NEW: row numbers (table editor)
FIX: exception when clicking to right of populated columns (table editor)